--- a/about.html
+++ b/about.html
@@ -6,9 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Phuong beo cute super cute</h1>
-    <h2>sua doi lan 2</h2>
-    <h2>sua doi lan 3</h2>
-    <h2>sua doi lan 4</h2>
+    <h1>about</h1>
   </body>
 </html>
